style.css
html {
    scroll-behavior: smooth;
    scroll-padding-top: 50px;
}

body {
    background-color: hsl(0, 0%, 20%);
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
}

p, ul {
    color: whitesmoke;
    font-size: 18px;
}

h1 {
    color: whitesmoke;
}

h2 {
    color: whitesmoke;
    padding-bottom: 25px;
}

.navbar {
    width: 100%;
    height: 50px;
    top: 0;
    position: fixed;
    background-color: hsl(0, 0%, 10%);
    overflow: hidden;
    
    display: flex;
    justify-content: center;
    align-items: center;

    font-size: 18px;
}

.navbar a {
    text-decoration: none;
    padding: 25px 25px;

    color: whitesmoke;
}

.navbar a:hover {
    background-color: hsl(0, 0%, 15%);    
}

/* to ensure that the home page takes up the entire screen */
#home {
    width: 100%;
    height: 100%;
    overflow: hidden;

    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

#homeImage {
    box-shadow: 10px 10px 5px rgb(25, 25, 26);
    border-radius: 7%;
}

#homeIcons {
    display: flex;
    justify-content: space-evenly;
}

#homeText {
    text-align: center;
}

#personal {
    width: 100%;
    height: 50%;
    overflow: hidden;

    display: flex;
    justify-content: space-evenly;

    background-color: hsl(0, 0%, 8%);
}

#about-me {
    width: 30%;
    text-align: center;
    padding-top: 30px;
}

#skills {
    width: 30%;
    text-align: center;
    padding-top: 30px;
}

#skills ul {
    list-style-position: inside;
    padding: 0;
    text-align: center;
}

#projects {
    width: 100%;
    height: 120%;
    overflow: hidden;

    text-align: center;
    padding: 20px 0;
}

#projects-content {
    display: flex;
    flex-direction: column;
    gap: 30px;
    align-items: center;
}

.project {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 100px;
    padding-bottom: 50px;
}

.project img {
    box-shadow: 10px 10px 5px rgb(25, 25, 26);
    width: 250px;
    height: auto;
}

#projects p {
    width: 500px;
}

#projects h3 {
    color: whitesmoke;
    font-weight: bold;
}


#education {
    width: 100%;
    height: 50%;
    overflow: hidden;
    
    text-align: center;
}

#education-content {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    padding-top: 100px;
}

#education-content h3 {
    color: whitesmoke;
    font-weight: bold;
    margin: 0;
}

#education-content p {
    margin: 5px 0;
}

#contact {
    width: 100%;
    height: 125px;
    overflow: hidden;
    background-color: hsl(0, 0%, 8%);
    text-align: center;
}

.hyperlink {
    text-decoration: none;
    font-weight: bold;
    color: hsl(240, 48%, 50%);
}

.hyperlink:hover {
    color: hsl(240, 87%, 71%);
}

